--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.47.1",
+    "react-native-button-component": "^0.1.18",
     "react-native-elements": "^0.15.0",
+    "react-native-fontawesome": "^5.7.0",
+    "react-native-material-design": "^0.3.7",
     "react-native-vector-icons": "^4.3.0",
     "react-navigation": "^1.0.0-beta.11"
   },
